--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ openai>=1.58.0
 requests>=2.31.0
 python-dotenv>=1.0.0
 pydantic>=2.0.0
+pydantic-settings>=2.0.0
 typer>=0.12.0
 rich>=13.0.0
 gitpython>=3.1.40
